--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,9 @@ header {
     height: 600px;
     background: #4ebc9b;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(15   0, 95%, 50%, 0.459), hsla(203, 45%, 52%, 0.664)), url(../img/portada.jpg);
+    background: -webkit-linear-gradient(to right, hsla(15   0, 95%, 50%, 0.459), hsla(203, 45%, 52%, 0.664)), url(./img/portada.jpg);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(150, 95%, 50%, 0.459), hsla(203, 45%, 52%, 0.664)), url(../img/portada.jpg);
+    background: linear-gradient(to right, hsla(150, 95%, 50%, 0.459), hsla(203, 45%, 52%, 0.664)), url(./img/portada.jpg);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
