--- a/styles.css
+++ b/styles.css
@@ -209,15 +209,15 @@ main .sobre-nosotros{
 }
 
 .card:nth-of-type(1) .img__back{
-    background-image: url(/img/bg1.jpg);
+    background-image: url(./img/bg1.jpg);
 }
 
 .card:nth-of-type(2) .img__back{
-    background-image: url(/img/bg2.jpg);
+    background-image: url(./img/bg2.jpg);
 }
 
 .card:nth-of-type(3) .img__back{
-    background-image: url(/img/bg3.jpg);
+    background-image: url(./img/bg3.jpg);
 }
 
 .card:hover .img__back{
